[gd_scene load_steps=7 format=3 uid="uid://dohd1u16v6q4v"]

[ext_resource type="Script" path="res://platformer_controller/platformer_controller.gd" id="1_s261a"]
[ext_resource type="Texture2D" uid="uid://c2mbde34m075t" path="res://icon.svg" id="2_pv007"]
[ext_resource type="PackedScene" uid="uid://1u506ll718wq" path="res://gameplayComponent/WaterDroplet.tscn" id="2_smj8w"]
[ext_resource type="Script" path="res://Scripts/bubble.gd" id="3_0yaw3"]
[ext_resource type="Texture2D" uid="uid://cvk1pw7tp4s04" path="res://utilitySprite/plain-circle.svg" id="4_gwj2t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1mndu"]
radius = 50.0

[node name="PlatformerController2D" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_s261a")
droplet = ExtResource("2_smj8w")

[node name="BubbleShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1mndu")

[node name="ShrimpImage" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(-6, -7)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("2_pv007")

[node name="ShrimpImage2" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(9, -1)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("2_pv007")

[node name="ShrimpImage3" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(-1, 8)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("2_pv007")

[node name="Line2D" type="Line2D" parent="."]
z_index = 2
closed = true
width = 3.0
default_color = Color(0.67451, 1, 1, 1)
script = ExtResource("3_0yaw3")

[node name="Sprite2D" type="Sprite2D" parent="Line2D"]
modulate = Color(0, 1, 1, 0.254902)
z_index = -1
scale = Vector2(0.214844, 0.214844)
texture = ExtResource("4_gwj2t")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Iframe" type="Timer" parent="."]
wait_time = 0.25

[connection signal="hit_ground" from="." to="." method="_on_hit_ground"]
[connection signal="timeout" from="Iframe" to="." method="_on_iframe_timeout"]
